syntax = "proto3";
option java_package = "com.dj.im.sdk.proto";
option java_outer_classname = "PrSendMessage";

message SendMessageRequest {
    // 会话key（单聊:MD5(低位用户id + 高位用户id)，群聊:群Id）
    string conversationKey = 1;
    // 会话类型（0:单聊、1:群聊）
    int32 conversationType = 2;
    // 消息来源用户id
    int64 fromId = 3;
    // 消息接收用户id（群聊为空）
    int64 toId = 4;
    // 消息类别（0:文字，1:图片，2:视频，3:语音，1000+:定为自定义消息体）
    int32 type = 5;
    // 消息内容（如果类型复杂，可以是json，但最好提取出摘要放入summary字段以便搜索）
    string data = 6;
    // 消息内容的摘要（作为为消息记录的搜索字段，如果这字段为空则以data字段进行搜索）
    string summary = 7;
}

message SendMessageResponse {
    // 消息id
    int64 id = 1;
    // 消息创建的时间戳
    int64 createTime = 9;
}